Fix responsive menu wrong behavior

--- a/source/partials/_header-hero.html.erb
+++ b/source/partials/_header-hero.html.erb
@@ -14,14 +14,14 @@
       </div><!-- / brand -->
 
       <div class="nav nav-main">
-        <nav id="main-nav-desktop">
+        <nav class="main-nav-desktop">
           <%= link_to "Features", "#" %>
           <%= link_to "Pricing", "#" %>
           <%= link_to "Documentation", "#", :class => 'new' %>
           <%= link_to "Log in", "#" %>
           <%= link_to "Book online demo", "#", :class => 'button' %>
         </nav>
-        <nav id="main-nav-mobile">
+        <nav class="main-nav-mobile">
           <span id="responsive-button"><%= image_tag 'icon-hamburguer.svg' %></span>
         </nav>
       </div><!-- / main-nav -->
@@ -40,6 +40,7 @@
       <figure class="picture">
         <%= image_tag 'illustration-welcome.svg' %>
       </figure><!-- / picture -->
+
     </div>
-  </div><!-- / section-hero -->
+  </div><!-- / section-header -->
 </div><!-- / header-hero -->
